<resources>
    <string name="app_name">MyNJP</string>
    <string name="Hallo">Hallo,</string>
    <string name="User">User</string>
    <string name="Brand">NJP</string>
    <string name="Express">EXPRESS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Me">Me</string>
    <string name="home">Home</string>
    <string name="rates">Rates</string>
    <string name="loginButton">Login</string>
    <string name="LoginPlease">Silahkan Login</string>
    <string name="name">Name</string>
    <string name="name_hint">Masukkan nama</string>
    <string name="alamat_hint">Masukkan alamat</string>
    <string name="tujuan_hint">Destination</string>
    <string name="email_hint">Masukkan Email</string>
    <string name="password_hint">Masukkan Password</string>
    <string name="registerTextview">Belum Punya Akun?</string>
    <string name="CreateAccount">Daftar disini</string>
    <string name="asal_hint">Origin</string>
    <string name="reset">RESET</string>
    <string name="Dimension">Items Weight:</string>
    <string name="weigthText">0.0 KG</string>
    <string name="saveButton">Save</string>
    <string name="checkButton">Check</string>
    <string name="Paket1">Paket YES:</string>
    <string name="Paket2">Paket REG:</string>
    <string name="logoutButton">Logout</string>
    <string name="BackToLogin">Kembali ke Login</string>
    <string name="registerButton">Submit</string>
    <string name="repassword_hint">Masukkan kembali password</string>
    <string name="username_hint">Masukkan Username</string>
    <string name="re_password_hint">Masukkan Kembali Password</string>
</resources>
